# badminton-court-detection

./: CMakeLists.txt  CourtLineCandidateDetector.cpp  CourtLinePixelDetector.cpp  DebugHelpers.cpp  DebugHelpers.h  Line.cpp  TennisCourtFitter.cpp  TennisCourtModel.cpp  TennisCourtModel.h  main.cpp
